--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.3.5</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
